# parascopes

./: .gitignore  README.md  pyproject.toml
src/: advanced_linear.py  basic_linear.py  basic_tests.py  dataset_residual.py  decode_inferred_embeds.py  fix_indices.py  gen_baseline.py  gen_comparison.py  get_cossims.py  get_missing_residuals.py  get_missing_sonar_embeds.py  get_regenerations.py  get_residuals.py  get_ruberic_comparison.py  get_sonar_embeds.py  get_summary_strings.py  infer_embeds.py  inspect_summaries.py  load_model.py  pca_residuals.py  plot_bleu_scores.py  plot_corr.py  plot_cossim.py  plot_linear_weights.py  plot_rubric.py  ruberic_scores.py  split_paragraphs.py  standardize_res.py  sweep.py  test_cuml.py  test_sonar.py  train_with_decoder.py  transferred_to_sonar.py  tune_sonar_summarizer.py  utils_gen.py  utils_load_data.py  utils_models.py  utils_parallel.py  utils_plot.py  utils_sonar.py  (+3 more)
src/yulia/: .gitignore  sonar_parascope_solutions.ipynb
src/yulia/outlines/: analyze.py  analyze_data_quality.py  config.py  evaluate.py  evaluate_probe.ipynb  generate_chunks.sh  generate_embedding_chunks.sh  generate_embeddings.py  hf_utils.py  io_utils.py  load_results.py  metrics.py  requirements.txt  ruberic_eval.ipynb  run_parallel_outline_gen_pipeline.py  run_pipeline.py  sonar_utils.py  test_structure.py  train_outline_probe.py  train_probe.py  upload_embeddings.py  wandb_tracker.py
src/yulia/outlines/deprecated/: download_chunks.py  id_utils.py  progress.py  run_pipeline.py
src/yulia/outlines/misc/: delete_from_hub.py
